<resources>
    <string name="app_name">Civetta Pizza</string>
    <string name="login_button_rus">Войти</string>
    <string name="registration_button_rus">Зарегистрироваться</string>
    <string name="label_password_rus">Пароль</string>
    <string name="hint_password_rus">Введите пароль</string>
    <string name="hint_email_phone_rus">Введите логин</string>
    <string name="label_email_phone_rus">Логин</string>
    <string name="label_idk_password_rus">Я забыл пароль</string>
    <string name="client_rus">Как клиент</string>
    <string name="employee_rus">Как сотрудник</string>
    <string name="authorization_rus">Авторизация</string>
    <string name="label_email_rus">Email</string>
    <string name="hint_email_rus">Введите почту</string>
    <string name="hint_repeat_password_rus">Повторите пароль</string>
    <string name="label_repeat_password_rus">Повторить пароль</string>
    <string name="label_login_rus">Логин</string>
    <string name="hint_login_rus">Введите логин</string>
    <string name="label_phone_rus">Телефон</string>
    <string name="hint_phone_rus">Введите телефон</string>
    <string name="label_i_already_have_account_rus">У меня уже есть аккаунт\n</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="combo_rus">Комбо</string>
    <string name="pizza_rus">Пицца</string>
    <string name="drinks_rus">Напитки</string>
    <string name="snacks_rus">Закуски</string>
    <string name="deserts_rus">Десерты</string>
    <string name="label_main_rus">Главная</string>
    <string name="my_owlcoins_label_rus">Мои совокоины</string>
    <string name="account_rus">Аккаунт</string>
    <string name="map_rus">Карта</string>
    <string name="menu_rus">Меню</string>
    <string name="owlcoins_rus">Совокоины</string>
    <string name="order_rus">Заказ</string>
    <string name="choose_address_delivery_rus">Выбери адрес доставки (Не работает)</string>
    <string name="delevery_rus">Доставка</string>
    <string name="in_restorant_rus">В ресторане</string>
    <string name="label_i_want_be_guest">Я хочу зайти как гость</string>
    <string name="see_past_order_rus">Посмотреть предыдущие заказы</string>
    <string name="see_fresh_order_rus">Посмотреть текущие заказы</string>
    <string name="make_order_rus">Оплатить</string>
    <string name="Sum_rus">Сумма</string>
    <string name="old_orders_rus">Предыдущие заказы</string>
    <string name="return_to_order_rus">Вернуть к текущему заказу</string>
    <string name="return_to_employee_rus">Вернуться к главной странице</string>
    <string name="pass_order_rus">Сдать</string>
</resources>