<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.MainClientFragment">

    <HorizontalScrollView
        android:id="@+id/CategoryHorizontalScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/mainLabel"
        app:layout_constraintTop_toBottomOf="@+id/mapButton">

        <!-- Контейнер для кнопок -->
        <LinearLayout
            android:id="@+id/buttonCategoryContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/comboCategoryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:text="@string/combo_rus"
                app:backgroundTint="@color/second_accent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/pizzaCategoryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:text="@string/pizza_rus"
                app:backgroundTint="@color/second_accent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/drinkCategoryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:text="@string/drinks_rus"
                app:backgroundTint="@color/second_accent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/snackCategoryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:text="@string/snacks_rus"
                app:backgroundTint="@color/second_accent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/desertCategoryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:text="@string/deserts_rus"
                app:backgroundTint="@color/second_accent" />
        </LinearLayout>

    </HorizontalScrollView>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout_ChooseMapMarkers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/sub_text_light_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabBackground="@drawable/tabs_selector"
        app:tabGravity="fill"
        app:tabIndicatorColor="@android:color/transparent"
        app:tabIndicatorHeight="0dp"
        app:tabMode="fixed"
        app:tabRippleColor="@android:color/transparent"
        app:tabSelectedTextColor="@color/text"
        app:tabTextColor="@color/text">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delevery_rus" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in_restorant_rus" />

    </com.google.android.material.tabs.TabLayout>

    <TextView
        android:id="@+id/mainLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/none"
        android:ems="10"
        android:fontFamily="@font/prosto_one_regular"
        android:text="@string/label_main_rus"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/tabLayout_ChooseMapMarkers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/chooseMapMarkersLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:text="@string/choose_address_delivery_rus"
        android:textColor="@color/text"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/CategoryHorizontalScrollView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout_ChooseMapMarkers" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/mapButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/button_pointer_background"
        android:backgroundTint="@color/none"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout_ChooseMapMarkers"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/productRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CategoryHorizontalScrollView" />


</androidx.constraintlayout.widget.ConstraintLayout>
