<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.AuthorizationFragment"
    android:background="@color/background">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/registration_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button_background"
        android:textAllCaps="false"
        android:text="@string/registration_button_rus"
        android:textColor="@color/background"
        android:textSize="18sp"
        app:backgroundTint="@color/brown_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button" />

    <ImageView
        android:id="@+id/imageBackUp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/straight_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button_background"
        android:text="@string/login_button_rus"
        android:textAllCaps="false"
        android:textColor="@color/text"
        android:textSize="18sp"
        app:backgroundTint="@color/accent_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editBoxPassword" />

    <EditText
        android:id="@+id/editBoxPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/sub_text_light_color"
        android:ems="10"
        android:hint="@string/hint_password_rus"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textColor="@color/sub_text_dark_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelPassword" />

    <EditText
        android:id="@+id/editBoxEmailPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/sub_text_light_color"
        android:ems="10"
        android:hint="@string/hint_email_phone_rus"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textColor="@color/sub_text_dark_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelEmailPhone" />

    <EditText
        android:id="@+id/labelPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:autofillHints=""
        android:background="@drawable/none"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="none"
        android:enabled="false"
        android:text="@string/label_password_rus"
        android:textColor="@color/sub_text_dark_color"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editBoxEmailPhone"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/labelIDKPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:background="@drawable/none"
        android:ems="10"
        android:inputType="none"
        android:text="@string/label_idk_password_rus"
        android:textAlignment="textEnd"
        android:textColor="@color/accent_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_button"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/labelEmailPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:background="@drawable/none"
        android:ems="10"
        android:inputType="none"
        android:enabled="false"
        android:text="@string/label_email_phone_rus"
        android:textColor="@color/sub_text_dark_color"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout_ChooseClientEmployee"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/labelRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/none"
        android:ems="10"
        android:fontFamily="@font/prosto_one_regular"
        android:inputType="none"
        android:enabled="false"
        android:text="@string/authorization_rus"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/tabLayout_ChooseClientEmployee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageBackUp"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/labelAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:background="@drawable/none"
        android:ems="10"
        android:fontFamily="@font/prosto_one_regular"
        android:inputType="none"
        android:enabled="false"
        android:text="@string/app_name"
        android:textAlignment="textEnd"
        android:textColor="@color/text"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageBackUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageBackUp"
        tools:ignore="TouchTargetSizeCheck" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="#7a87a4"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout_ChooseClientEmployee"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/sub_text_light_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageBackUp"
        app:tabBackground="@drawable/tabs_selector"
        app:tabGravity="fill"
        app:tabIndicatorColor="@android:color/transparent"
        app:tabIndicatorHeight="0dp"
        app:tabMode="fixed"
        app:tabRippleColor="@android:color/transparent"
        app:tabSelectedTextColor="@color/text"
        app:tabTextColor="@color/text">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/client_rus" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/employee_rus" />

    </com.google.android.material.tabs.TabLayout>

    <ImageView
        android:id="@+id/imageIconBackUp"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="32dp"
        android:src="@drawable/owl_icon"
        app:layout_constraintBottom_toBottomOf="@+id/imageBackUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>