<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.MainEmployeeFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/myPastOrdersButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/button_background"
        android:padding="20dp"
        android:text="@string/see_past_order_rus"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/text"
        android:textSize="18sp"
        app:backgroundTint="@color/second_accent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myOrdersButton" />

    <TextView
        android:id="@+id/mainLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/none"
        android:ems="10"
        android:fontFamily="@font/prosto_one_regular"
        android:text="@string/label_main_rus"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/myAccountButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/myAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/button_background"
        app:backgroundTint="@color/second_accent"
        android:textAllCaps="false"
        android:textColor="@color/text"
        android:textSize="18sp"
        android:textAlignment="viewStart"
        android:padding="20dp"
        android:text="@string/account_rus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/myOrdersButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/button_background"
        android:padding="20dp"
        android:text="@string/see_fresh_order_rus"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/text"
        android:textSize="18sp"
        app:backgroundTint="@color/second_accent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myAccountButton" />
</androidx.constraintlayout.widget.ConstraintLayout>