<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.OrderClientFragment">


    <TextView
        android:id="@+id/mainOrderClientLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/none"
        android:ems="10"
        android:fontFamily="@font/prosto_one_regular"
        android:text="@string/order_rus"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerOrderItemView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerOrderItemView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/labelOwlCoin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/see_past_orders_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_background"
        android:text="@string/see_past_order_rus"
        android:textAllCaps="false"
        android:textColor="@color/text"
        android:textSize="18sp"
        app:backgroundTint="@color/second_accent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/make_order_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_background"
        android:text="@string/make_order_rus"
        android:textAllCaps="false"
        android:textColor="@color/text"
        android:textSize="18sp"
        app:backgroundTint="@color/accent_color"
        app:layout_constraintBottom_toTopOf="@+id/see_past_orders_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/labelPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:background="@drawable/none"
        android:ems="10"
        android:enabled="false"
        android:importantForAutofill="no"
        android:inputType="none"
        android:text="@string/Sum_rus"
        android:textColor="@color/sub_text_light_color"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/make_order_button"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/labelNumericPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:background="@drawable/none"
        android:enabled="false"
        android:importantForAutofill="no"
        android:inputType="none"
        android:text="99999999 ₽"
        android:textColor="@color/sub_text_light_color"
        android:textSize="24sp"
        android:gravity="end"
        app:layout_constraintBottom_toTopOf="@+id/make_order_button"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/labelOwlCoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:background="@drawable/none"
        android:ems="10"
        android:enabled="false"
        android:importantForAutofill="no"
        android:inputType="none"
        android:text="@string/owlcoins_rus"
        android:textColor="@color/sub_text_light_color"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/labelPrice"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/labelNumericOwlCoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:background="@drawable/none"
        android:enabled="false"
        android:importantForAutofill="no"
        android:inputType="none"
        android:text="+999"
        android:textColor="@color/sub_text_light_color"
        android:textSize="24sp"
        android:gravity="end"
        app:layout_constraintBottom_toTopOf="@+id/labelNumericPrice"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>